docs/api/qiskit/0.19/qiskit.aqua.algorithms.QSVM.mdx
---
title: QSVM (v0.19)
description: API reference for qiskit.aqua.algorithms.QSVM in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.algorithms.QSVM
---

# QSVM

<Class id="qiskit.aqua.algorithms.QSVM" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/algorithms/classifiers/qsvm/qsvm.py" signature="QSVM(feature_map, training_dataset=None, test_dataset=None, datapoints=None, multiclass_extension=None, quantum_instance=None)" modifiers="class">
  Quantum SVM algorithm.

  A key concept in classification methods is that of a kernel. Data cannot typically be separated by a hyperplane in its original space. A common technique used to find such a hyperplane consists on applying a non-linear transformation function to the data. This function is called a *feature map*, as it transforms the raw features, or measurable properties, of the phenomenon or subject under study. Classifying in this new feature space – and, as a matter of fact, also in any other space, including the raw original one – is nothing more than seeing how close data points are to each other. This is the same as computing the inner product for each pair of data in the set. In fact we do not need to compute the non-linear feature map for each datum, but only the inner product of each pair of data points in the new feature space. This collection of inner products is called the **kernel** and it is perfectly possible to have feature maps that are hard to compute but whose kernels are not.

  The QSVM algorithm applies to classification problems that require a feature map for which computing the kernel is not efficient classically. This means that the required computational resources are expected to scale exponentially with the size of the problem. QSVM uses a Quantum processor to solve this problem by a direct estimation of the kernel in the feature space. The method used falls in the category of what is called **supervised learning**, consisting of a **training phase** (where the kernel is calculated and the support vectors obtained) and a **test or classification phase** (where new data without labels is classified according to the solution found in the training phase).

  Internally, QSVM will run the binary classification or multiclass classification based on how many classes the data has. If the data has more than 2 classes then a *multiclass\_extension* is required to be supplied. Aqua provides several [`multiclass_extensions`](qiskit.aqua.components.multiclass_extensions#module-qiskit.aqua.components.multiclass_extensions "qiskit.aqua.components.multiclass_extensions").

  See also [https://arxiv.org/abs/1804.11326](https://arxiv.org/abs/1804.11326)

  **Parameters**

  *   **feature\_map** (`Union`\[[`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit"), [`FeatureMap`](qiskit.aqua.components.feature_maps.FeatureMap "qiskit.aqua.components.feature_maps.feature_map.FeatureMap")]) – Feature map module, used to transform data
  *   **training\_dataset** (`Optional`\[`Dict`\[`str`, `ndarray`]]) – Training dataset.
  *   **test\_dataset** (`Optional`\[`Dict`\[`str`, `ndarray`]]) – Testing dataset.
  *   **datapoints** (`Optional`\[`ndarray`]) – Prediction dataset.
  *   **multiclass\_extension** (`Optional`\[[`MulticlassExtension`](qiskit.aqua.components.multiclass_extensions.MulticlassExtension "qiskit.aqua.components.multiclass_extensions.multiclass_extension.MulticlassExtension")]) – If number of classes is greater than 2 then a multiclass scheme must be supplied, in the form of a multiclass extension.
  *   **quantum\_instance** (`Union`\[[`QuantumInstance`](qiskit.aqua.QuantumInstance "qiskit.aqua.quantum_instance.QuantumInstance"), [`BaseBackend`](qiskit.providers.BaseBackend "qiskit.providers.basebackend.BaseBackend"), `None`]) – Quantum Instance or Backend

  **Raises**

  [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – Multiclass extension not supplied when number of classes > 2

  ## Attributes

  <span id="qsvm-batch-size" />

  ### BATCH\_SIZE

  <Attribute id="qiskit.aqua.algorithms.QSVM.BATCH_SIZE" attributeValue="1000" />

  <span id="qsvm-backend" />

  ### backend

  <Attribute id="qiskit.aqua.algorithms.QSVM.backend" attributeTypeHint="qiskit.providers.basebackend.BaseBackend">
    Returns backend.

    **Return type**

    [`BaseBackend`](qiskit.providers.BaseBackend "qiskit.providers.basebackend.BaseBackend")
  </Attribute>

  <span id="qsvm-quantum-instance" />

  ### quantum\_instance

  <Attribute id="qiskit.aqua.algorithms.QSVM.quantum_instance" attributeTypeHint="Union[None, qiskit.aqua.quantum_instance.QuantumInstance]">
    Returns quantum instance.

    **Return type**

    `Optional`\[[`QuantumInstance`](qiskit.aqua.QuantumInstance "qiskit.aqua.quantum_instance.QuantumInstance")]
  </Attribute>

  <span id="qsvm-random" />

  ### random

  <Attribute id="qiskit.aqua.algorithms.QSVM.random">
    Return a numpy random.
  </Attribute>

  <span id="qsvm-ret" />

  ### ret

  <Attribute id="qiskit.aqua.algorithms.QSVM.ret">
    returns result
  </Attribute>

  ## Methods

  <span id="qsvm-construct-circuit" />

  ### construct\_circuit

  <Function id="qiskit.aqua.algorithms.QSVM.construct_circuit" signature="QSVM.construct_circuit(x1, x2, measurement=False)">
    Generate inner product of x1 and x2 with the given feature map.

    The dimension of x1 and x2 must be the same.

    **Parameters**

    *   **x1** (*numpy.ndarray*) – data points, 1-D array, dimension is D
    *   **x2** (*numpy.ndarray*) – data points, 1-D array, dimension is D
    *   **measurement** (*bool*) – add measurement gates at the end

    **Returns**

    constructed circuit

    **Return type**

    [QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")
  </Function>

  <span id="qsvm-construct-kernel-matrix" />

  ### construct\_kernel\_matrix

  <Function id="qiskit.aqua.algorithms.QSVM.construct_kernel_matrix" signature="QSVM.construct_kernel_matrix(x1_vec, x2_vec=None, quantum_instance=None)">
    Construct kernel matrix, if x2\_vec is None, self-innerproduct is conducted.

    **Notes**

    When using statevector\_simulator, we only build the circuits for Psi(x1)|0> rather than Psi(x2)^dagger Psi(x1)|0>, and then we perform the inner product classically. That is, for statevector\_simulator, the total number of circuits will be O(N) rather than O(N^2) for qasm\_simulator.

    **Parameters**

    *   **x1\_vec** (*numpy.ndarray*) – data points, 2-D array, N1xD, where N1 is the number of data, D is the feature dimension
    *   **x2\_vec** (*numpy.ndarray*) – data points, 2-D array, N2xD, where N2 is the number of data, D is the feature dimension
    *   **quantum\_instance** ([*QuantumInstance*](qiskit.aqua.QuantumInstance "qiskit.aqua.QuantumInstance")) – quantum backend with all settings

    **Returns**

    2-D matrix, N1xN2

    **Return type**

    numpy.ndarray

    **Raises**

    [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – Quantum instance is not present.
  </Function>

  <span id="qsvm-get-kernel-matrix" />

  ### get\_kernel\_matrix

  <Function id="qiskit.aqua.algorithms.QSVM.get_kernel_matrix" signature="QSVM.get_kernel_matrix(quantum_instance, feature_map, x1_vec, x2_vec=None)" modifiers="static">
    Construct kernel matrix, if x2\_vec is None, self-innerproduct is conducted.

    **Notes**

    When using statevector\_simulator, we only build the circuits for Psi(x1)|0> rather than Psi(x2)^dagger Psi(x1)|0>, and then we perform the inner product classically. That is, for statevector\_simulator, the total number of circuits will be O(N) rather than O(N^2) for qasm\_simulator.

    **Parameters**

    *   **quantum\_instance** ([*QuantumInstance*](qiskit.aqua.QuantumInstance "qiskit.aqua.QuantumInstance")) – quantum backend with all settings
    *   **feature\_map** ([*FeatureMap*](qiskit.aqua.components.feature_maps.FeatureMap "qiskit.aqua.components.feature_maps.FeatureMap")) – a feature map that maps data to feature space
    *   **x1\_vec** (*numpy.ndarray*) – data points, 2-D array, N1xD, where N1 is the number of data, D is the feature dimension
    *   **x2\_vec** (*numpy.ndarray*) – data points, 2-D array, N2xD, where N2 is the number of data, D is the feature dimension

    **Returns**

    2-D matrix, N1xN2

    **Return type**

    numpy.ndarray
  </Function>

  <span id="qsvm-load-model" />

  ### load\_model

  <Function id="qiskit.aqua.algorithms.QSVM.load_model" signature="QSVM.load_model(file_path)">
    Load a model from a file path.

    **Parameters**

    **file\_path** (*str*) – the path of the saved model.
  </Function>

  <span id="qsvm-predict" />

  ### predict

  <Function id="qiskit.aqua.algorithms.QSVM.predict" signature="QSVM.predict(data, quantum_instance=None)">
    Predict using the svm.

    **Parameters**

    *   **data** (*numpy.ndarray*) – NxD array, where N is the number of data, D is the feature dimension.
    *   **quantum\_instance** ([*QuantumInstance*](qiskit.aqua.QuantumInstance "qiskit.aqua.QuantumInstance")) – quantum backend with all setting

    **Returns**

    predicted labels, Nx1 array

    **Return type**

    numpy.ndarray

    **Raises**

    [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – Quantum instance is not present.
  </Function>

  <span id="qsvm-run" />

  ### run

  <Function id="qiskit.aqua.algorithms.QSVM.run" signature="QSVM.run(quantum_instance=None, **kwargs)">
    Execute the algorithm with selected backend.

    **Parameters**

    *   **quantum\_instance** (`Union`\[[`QuantumInstance`](qiskit.aqua.QuantumInstance "qiskit.aqua.quantum_instance.QuantumInstance"), [`BaseBackend`](qiskit.providers.BaseBackend "qiskit.providers.basebackend.BaseBackend"), `None`]) – the experimental setting.
    *   **kwargs** (*dict*) – kwargs

    **Returns**

    results of an algorithm.

    **Return type**

    dict

    **Raises**

    [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – If a quantum instance or backend has not been provided
  </Function>

  <span id="qsvm-save-model" />

  ### save\_model

  <Function id="qiskit.aqua.algorithms.QSVM.save_model" signature="QSVM.save_model(file_path)">
    Save the model to a file path.

    **Parameters**

    **file\_path** (*str*) – a path to save the model.
  </Function>

  <span id="qsvm-set-backend" />

  ### set\_backend

  <Function id="qiskit.aqua.algorithms.QSVM.set_backend" signature="QSVM.set_backend(backend, **kwargs)">
    Sets backend with configuration.

    **Return type**

    `None`
  </Function>

  <span id="qsvm-setup-datapoint" />

  ### setup\_datapoint

  <Function id="qiskit.aqua.algorithms.QSVM.setup_datapoint" signature="QSVM.setup_datapoint(datapoints)">
    Setup data points, if the data were there, they would be overwritten.

    **Parameters**

    **datapoints** (*numpy.ndarray*) – prediction dataset.
  </Function>

  <span id="qsvm-setup-test-data" />

  ### setup\_test\_data

  <Function id="qiskit.aqua.algorithms.QSVM.setup_test_data" signature="QSVM.setup_test_data(test_dataset)">
    Setup test data, if the data were there, they would be overwritten.

    **Parameters**

    **test\_dataset** (*dict*) – test dataset.
  </Function>

  <span id="qsvm-setup-training-data" />

  ### setup\_training\_data

  <Function id="qiskit.aqua.algorithms.QSVM.setup_training_data" signature="QSVM.setup_training_data(training_dataset)">
    Setup training data, if the data were there, they would be overwritten.

    **Parameters**

    **training\_dataset** (*dict*) – training dataset.
  </Function>

  <span id="qsvm-test" />

  ### test

  <Function id="qiskit.aqua.algorithms.QSVM.test" signature="QSVM.test(data, labels, quantum_instance=None)">
    Test the svm.

    **Parameters**

    *   **data** (*numpy.ndarray*) – NxD array, where N is the number of data, D is the feature dimension.
    *   **labels** (*numpy.ndarray*) – Nx1 array, where N is the number of data
    *   **quantum\_instance** ([*QuantumInstance*](qiskit.aqua.QuantumInstance "qiskit.aqua.QuantumInstance")) – quantum backend with all setting

    **Returns**

    accuracy

    **Return type**

    float

    **Raises**

    [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – Quantum instance is not present.
  </Function>

  <span id="qsvm-train" />

  ### train

  <Function id="qiskit.aqua.algorithms.QSVM.train" signature="QSVM.train(data, labels, quantum_instance=None)">
    Train the svm.

    **Parameters**

    *   **data** (*numpy.ndarray*) – NxD array, where N is the number of data, D is the feature dimension.
    *   **labels** (*numpy.ndarray*) – Nx1 array, where N is the number of data
    *   **quantum\_instance** ([*QuantumInstance*](qiskit.aqua.QuantumInstance "qiskit.aqua.QuantumInstance")) – quantum backend with all setting

    **Raises**

    [**AquaError**](qiskit.aqua.AquaError "qiskit.aqua.AquaError") – Quantum instance is not present.
  </Function>
</Class>

